[gd_scene load_steps=5 format=2]

[ext_resource path="res://enemies/behaviors/slow_walker_behavior.gd" type="Script" id=1]
[ext_resource path="res://_addons/aggro/aggro.tscn" type="PackedScene" id=3]
[ext_resource path="res://_addons/movement/top_down_movement.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 250.0

[node name="slow_walker_behavior" type="Node2D"]
script = ExtResource( 1 )
body_path = NodePath("..")

[node name="aggro" parent="." instance=ExtResource( 3 )]
visible = false
collision_mask = 2
raycast_path = NodePath("../aggro_ray")
min_interval = 0.2
max_interval = 0.3

[node name="collision_shape_2d" type="CollisionShape2D" parent="aggro"]
shape = SubResource( 1 )

[node name="aggro_ray" type="RayCast2D" parent="."]
enabled = true
collision_mask = 3

[node name="top_down_movement" parent="." instance=ExtResource( 4 )]
body_path = NodePath("../..")
direction_path = NodePath("..")
default_max_speed = 100.0

[connection signal="aggro" from="aggro" to="." method="_on_aggro_aggro"]
[connection signal="aggro_lost" from="aggro" to="." method="_on_aggro_aggro_lost"]
